--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,4 +2,7 @@ $header-height: 35px;
 $toolbar-height: 40px;
 $formula-height: 25px;
 $info-cell-width: 40px;
+$row-height: 24px;
+$cell-width: 120px;
+$db-header-height: 64px;
 $border-color: #c0c0c0;
