--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -18,6 +18,7 @@
 
     .row-info {
         display: flex;
+        position: relative;
         justify-content: center;
         align-items: center;
         min-width: $info-cell-width;
@@ -31,6 +32,7 @@
         display: flex;
     }
     .column {
+        position: relative;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -57,8 +59,37 @@
 
         &.selected {
             border: none;
-            outline: 2px solid #3c74ff;
+            outline: 2px solid $primary-color;
             z-index: 2;
+        }
+    }
+
+    .col-resize, .row-resize {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        opacity: 0;
+        background: $primary-color;
+        z-index: 1000;
+
+        &:hover {
+           opacity: 1!important; 
+        }
+    }
+    .col-resize {
+        top: 0;
+        width: 4px;
+
+        &:hover {
+            cursor: col-resize;
+        }
+    }
+    .row-resize {
+        left: 0;
+        height: 4px;
+
+        &:hover {
+            cursor: row-resize;
         }
     }
 }
